2011-03-15	Chris Johns <chrisj@rtems.org>

	PR 1757/filesystem
	* libfs/src/rfs/rtems-rfs-block-pos.h: Fix the bug in equal
	compare.

2011-03-15	Chris Johns <chrisj@rtems.org>

	PR 1763/shell
	* libmisc/shell/hexdump-conv.c: Remove debug hacks.

	PR 1757/filesystem
	* libfs/src/rfs/rtems-rfs-block-pos.h,
	libfs/src/rfs/rtems-rfs-block.h, libfs/src/rfs/rtems-rfs-file.c,
	libfs/src/rfs/rtems-rfs-rtems-file.c: Set the file size in
	iop-size when a file is open. Fix lseek to end of file then write
	for sizes less than half the file system block size.
	* libfs/src/rfs/rtems-rfs-rtems-dev.c,
	libfs/src/rfs/rtems-rfs-rtems-dir.c,
	libfs/src/rfs/rtems-rfs-rtems.c, libfs/src/rfs/rtems-rfs-rtems.h:
	Fix the fstat and fchmod calls due to the change in the iop struct
	where pathinfo went away. The node_access field in pathinfo was
	overloaded.

2011-03-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/mouse/mouse_parser.c, libmisc/mouse/serial_mouse.c: Remove
	include of bsp.h

2011-03-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libfs/src/imfs/deviceerrno.c: Add RTEMS_INVALID_CLOCK,
	RTEMS_INVALID_NODE, and RTEMS_NOT_CONFIGURED.

2011-03-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1762/cpukit
	* Makefile.am, preinstall.am, libmisc/Makefile.am, wrapup/Makefile.am:
	Add generic serial mouse driver and mouse parser. The parser code was
	in the pc386 BSP but was generic so cleaned up and placed here.
	Serial mouse driver itself is new.
	* libmisc/mouse/README, libmisc/mouse/mouse_parser.c,
	libmisc/mouse/mouse_parser.h, libmisc/mouse/serial_mouse.c,
	libmisc/mouse/serial_mouse.h: New files.

2011-03-14	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* score/include/rtems/score/sysstate.h: Spelling.

2011-03-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* sapi/include/rtems/extension.h: Documentation.

2011-03-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/threadget.c: Remove conditional since this path can be